# Furnace

./: .gitignore  .vimprojects  .vimrc  CharacterDesignGuide.txt  Furnace32dbg.ilk  LICENSE  Makefile  README.md  loadProject.sh
VisualC/: VisualC2010.sln  VisualC2010EE.sln  VisualC2013.sln
VisualC/Furnace/: Test.vcxproj  Test.vcxproj.filters  VisualC2010.vcxproj  VisualC2010.vcxproj.filters  VisualC2010EE.vcxproj  VisualC2010EE.vcxproj.filters  VisualC2013.vcxproj  VisualC2013.vcxproj.filters
VisualC/Furnace/Win32/Debug/: CL.read.1.tlog  CL.write.1.tlog  Test.ilk  VisualC2010.lastbuildstate  VisualC2013.ilk  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb  vc120.idb
VisualC/Furnace/Win32/Debug/Test.tlog/: CL.read.1.tlog  CL.write.1.tlog  Test.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VisualC/Furnace/Win32/Debug/VisualC2013.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VisualC/Furnace/Win32/Release/VisualC2013.tlog/: CL.read.1.tlog  CL.write.1.tlog  VisualC2013.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VisualC/Furnace/x64/Debug/: VisualC2013.ilk  vc120.idb
VisualC/Furnace/x64/Debug/VisualC2013.tlog/: CL.read.1.tlog  CL.write.1.tlog  VisualC2013.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VisualC/Furnace/x64/Release/VisualC2013.tlog/: CL.read.1.tlog  CL.write.1.tlog  VisualC2013.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VisualC/VisualC2010EE/: VisualC2010EE.sln  VisualC2010EE.vcxproj  VisualC2010EE.vcxproj.filters
agk/: FurnaceAGK.agk  gameStateMachine.agc  main.agc
agk/media/: bytecode.byc
c/: CMakeLists.txt  characters.c  game.c  gameObject.c  main.c  player.c  textureManager.c
configs/: .Xresources  .twmrc  .vimrc
cpp/: CMakeLists.txt  Enemy.cpp  Game.cpp  GameObject.cpp  GameStateMachine.cpp  Gui.cpp  InputHandler.cpp  Level.cpp  NodeFactory.cpp  NodeGraph.cpp  Player.cpp  ResourceManager.cpp  TextureManager.cpp
include/: Enemy.hpp  Game.hpp  GameObject.hpp  GameStateMachine.hpp  Gui.hpp  InputHandler.hpp  Level.hpp  NodeFactory.hpp  NodeGraph.hpp  Player.hpp  ResourceManager.hpp  TextureManager.hpp  characters.h  configuration.h  furnaceTypes.h  game.h  gameObject.h  handleEvents.h  input.h  player.h  stdbool.h  textureManager.h  vector2D.h  vectors.h
resources/json/: GameStates.json
resources/raw/: Furnace_UI.blend  character.blend
src/: characters.c  configuration.c  game.c  gameObject.c  handleEvents.c  input.c  main.c  player.c  test.c  textureManager.c  vector2D.c  vectors.c
test/: Node.cpp  Node.hpp  test.c
